fixed score overlapping with canvas

--- a/common/style.css
+++ b/common/style.css
@@ -76,6 +76,9 @@ html {
   line-height: 90px;
   text-align: center;
   display: none;
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
   
 }
 
